# gim

./: .gitignore  Cargo.toml  debug.txt  readme.md
logs/: log
output/: test_output.cm
src/: cluster.rs  ctree.rs  lib.rs  main.rs  mesh.rs  reader.rs  utils.rs  writer.rs
src/cmreader/: Cargo.toml
src/cmreader/src/: lib.rs  reader.rs
src/cmwriter/: Cargo.toml
src/cmwriter/src/: cluster.rs  ctree.rs  lib.rs  main.rs  mesh.rs  utils.rs  writer.rs
src/interop/: Cargo.toml
src/interop/src/: lib.rs
