[package]
name = "gim"
version = "0.1.0"
authors = ["mwjrink <mwjrink@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "2.0.2"
rand = "0.8.4"

# TODO
# obj => mesh image
# multiple images, float.x, float.y, float.z, albedo, roughness/shininess?