[package]
name = "gim"
version = "0.1.0"
authors = ["mwjrink <mwjrink@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "3.2.0"
cmreader = { path = "src/cmreader" }
cmwriter = { path = "src/cmwriter" }

# TODO
# obj => mesh image
# multiple images, float.x, float.y, float.z, albedo, roughness/shininess?